src/components/styles/NotesWindow.css
/* AxonRollYourOwnColorSchemeConstructionSet.tsx: */
/* modify this value right here to change the color of the note window */
/* :root {
    --note-window-color: #384764;
} */

/* Styling for the window */
.panel {
    display: flex;
    flex-direction: column; /* Stacks children vertically */
    padding: 10px;
    background: var(--note-window-color);
    border-radius: 8px;
    border: 1px solid gray;
    color: white;
    width: 400px;
    height: 400px;
    min-height: 200px;
    max-height: 800px;
    box-sizing: border-box;
}

/* Top Resize Handle */
.resize-handle-top {
    position: absolute;
    background: var(--note-window-color);
    top: 0;
    left: 0;
    width: 100%;
    height: 10px; /* Height of the draggable area */
    cursor: ns-resize;
    z-index: 10; /* Ensure it sits above other content */
}

/* Style for the resize handle that changes the note's height*/
.resize-handle {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 10px;
    cursor: ns-resize;
    background: rgba(255, 255, 255, 0.2); /* Subtle visual indicator */
}

.notesTitle {
    text-align: center;
    margin: auto;
}

/* defines a global variable so that closeButtons width and height and closeButtonIcons width and height all change together */
:root {
    --button-img-size: 20px;
}

/*The position of the button in the notes window*/
.closeButton {
    position: absolute;
    right: 5px;
    top: 14px;
    background: transparent;
    width: var(--button-img-size);
    height: var(--button-img-size);
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
}

/*The size of the X icon*/
.closeButtonIcon {
    width: var(--button-img-size);
    height: var(--button-img-size);
}

